# media-bias

./: .gitignore  README.md  article_extractor.py  checkboxes.py  colleges_to_newspapers.py  config.py  db_info_logger.py  environment.yml  gcs_requester.py  items.py  local_widgets.py  newspaper_enricher.py  pipelines.py  postgres.py  pyproject.toml  queue_processing.py  sitemaps.py  spiders.py
mediaeye/: .gitignore  __init__.py  article_enricher.py  db_info_logger.py  environment.yml  gcs.py  items.py  newspaper_enricher.py  pipelines.py  postgres.py  sitemaps.py  spiders.py
mediaeye/pipelines/: __init__.py  amcha_pipelines.py  article_pipelines.py  wiki_pipeline.py
scrapy/college_list/: scrapy.cfg
scrapy/college_list/college_list/: settings.py
scrapy/college_list/college_list/spiders/: colleges.py
scrapy/link_verification/: scrapy.cfg
scrapy/link_verification/link_verification/: items.py  middlewares.py  pipelines.py  settings.py
scrapy/link_verification/link_verification/spiders/: screenshot.py
scrapy_media_bias/: scrapy.cfg
scrapy_media_bias/scrapy_media_bias/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_media_bias/scrapy_media_bias/spiders/: colleges.py  newspaper_verification.py  quotes.py
