[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mediaeye"
authors = [{name = "Adam Lehavi", email = "adamlehavi@gmail.com"}]
dynamic = ["version", "description"]
dependencies = [
    "advertools >=0.16.1",
    "beautifulsoup4 >=4.12.3",
    "ipykernel >=6.29.5",
    "ipywidgets >=8.1.5",
    "matplotlib >=3.9.2",
    "numpy >=2.1.2",
    "pandas >=2.2.3",
    "pip >=24.2",
    "psycopg2 >=2.9.9",
    "requests >=2.32.3",
    "scrapy >=2.11.2",
    "tqdm >=4.66.5",
]

[tool.flit.sdist]
exclude = ["*.toml", "*.json", "*.yaml", "py_config.py"]